Ensure SVGs in the Icon component are properly aligned vertically

--- a/packages/react/src/Icon/Icon.module.css
+++ b/packages/react/src/Icon/Icon.module.css
@@ -3,6 +3,10 @@
   padding: 0;
 }
 
+.Icon > svg {
+  display: block;
+}
+
 .Icon--size-20 {
   width: var(--base-size-20);
   height: var(--base-size-20);
